--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -663,7 +663,7 @@ ul.row{
     transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
-.card-work:hover .card-title{
+.card-work:hover .card-inner{
     background-color: rgba(0, 0, 0, 0.7);
 }
 
